[gd_scene load_steps=4 format=3 uid="uid://bl5igur7y2g8s"]

[ext_resource type="Script" path="res://EditorSystem/EditorUI.gd" id="1_avofj"]
[ext_resource type="Script" path="res://Palette.gd" id="2_r11f3"]
[ext_resource type="Script" path="res://StatMonitor.gd" id="3_bua5r"]

[node name="EditorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_avofj")

[node name="Top-Left Buttons" type="HBoxContainer" parent="."]
layout_mode = 0

[node name="Restart Editor" type="Button" parent="Top-Left Buttons"]
layout_mode = 2
text = "Restart Editor"

[node name="Go To Sim" type="Button" parent="Top-Left Buttons"]
layout_mode = 2
text = "Go To Sim"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -72.0
offset_right = 637.0
grow_vertical = 0
script = ExtResource("2_r11f3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 455.0
offset_right = 150.0
offset_bottom = 543.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 1.0
offset_bottom = 77.0

[node name="StatShaftCount" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_bua5r")
base_string = "Shafts: "
stat_name = "shaft_count"

[node name="InteractionMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -244.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InteractionMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Label" type="Label" parent="InteractionMenu/VBoxContainer"]
layout_mode = 2
text = "Block Parameters"

[node name="HSeparator" type="HSeparator" parent="InteractionMenu/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InteractionMenu/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Top-Left Buttons/Restart Editor" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Top-Left Buttons/Go To Sim" to="." method="_on_to_sim_pressed"]
